src/scss/imports/modules/_dependency_list.scss
/**
 * dependency-list bem module
 */

.dependency-list {
    display: grid;
    grid-template-columns: repeat(4, auto);
    grid-gap: var(--gap);
    page-break-before: avoid;

    .layout-table & {
        display: none;
    }

    &__title,
    &__description {
        border: 1px solid var(--color-black);
        page-break-inside: avoid;
    }

    &__title {
        grid-row: span var(--dependency-length, 1);
        padding: .4rem;
    }

    &__description {
        grid-column: span 3;
        display: grid;
        grid-template-columns: subgrid;
        background-color: var(--color-accent-transparent);
    }

    &__sub-description {
        padding: .4rem;
        border-bottom: 1px solid var(--color-black);
        margin-bottom: -1px;
    }
}

